# saleacc2tiger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: deploy_railway.md  deploy_vps.md
scripts/: bootstrap_vps.sh  deploy_docker.sh  import_chatgpt_stock.py  init_google_sheet.py  load_inventory.py  repair_tg_ids.py  run_local_bot.sh  start_bot_railway.sh  start_webhook_railway.sh  stop_local_bot.sh
src/saleacc_bot/: config.py  db.py  keyboards.py  main.py  models.py  security.py  states.py  ui.py  url_utils.py  webhook_app.py
src/saleacc_bot/handlers/: __init__.py  admin.py  payments.py  user.py
src/saleacc_bot/services/: catalog.py  cryptobot.py  inventory.py  notifications.py  orders.py  reaper.py  sheets_store.py  stock.py  users.py  yookassa.py
