[project]
name = "saleacc-bot"
version = "0.1.0"
description = "Telegram marketplace bot for digital access delivery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.16.0",
  "SQLAlchemy>=2.0.36",
  "aiosqlite>=0.20.0",
  "python-dotenv>=1.0.1",
  "cryptography>=44.0.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.34.0",
  "gspread>=6.2.1",
  "google-auth>=2.36.0",
  "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[project.scripts]
saleacc-bot = "saleacc_bot.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
